--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,9 @@
     --private-foreground-solid: var(--foreground);
 
     /* NEW: Solid public/private/organisation hover backgrounds for light mode (10% lighter) */
-    --public-background-solid-hover-light: 200 90% 92.5%;
-    --private-background-solid-hover-light: 270 100% 97.5%;
-    --organisation-background-solid-hover-light: 80 60% 92.5%;
+    --public-background-solid-hover: 200 90% 92.5%; /* Corrected variable name */
+    --private-background-solid-hover: 270 100% 97.5%; /* Corrected variable name */
+    --organisation-background-solid-hover: 80 60% 92.5%; /* Corrected variable name */
 
     --olive: 80 40% 50%; /* Olive green */
     --olive-foreground: 80 40% 10%; /* Darker olive for text */
@@ -165,9 +165,9 @@
     --organisation-foreground-solid: var(--foreground);
 
     /* NEW: Solid public/private/organisation hover backgrounds for dark mode (10% lighter) */
-    --public-background-solid-hover-dark: 220 50% 52.5%;
-    --private-background-solid-hover-dark: 270 30% 52.5%;
-    --organisation-background-solid-hover-dark: 80 40% 52.5%;
+    --public-background-solid-hover: 220 50% 52.5%; /* Corrected variable name */
+    --private-background-solid-hover: 270 30% 52.5%; /* Corrected variable name */
+    --organisation-background-solid-hover: 80 40% 52.5%; /* Corrected variable name */
 
     --olive: 80 40% 50%; /* Olive green */
     --olive-foreground: 80 40% 90%; /* Lighter olive for text */
