--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,9 @@
     --background: 222.2 84% 10%;
     --foreground: 210 40% 98%;
 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 40.2% 65.1%;
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
